maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:11: error: not found: value NORD
    setDirection(NORD)
                 ^IslandMaze:17: error: not found: value NORD
      setDirection(NORD)
                   ^