maze.island.IslandMaze.scala.code
override def run() {
  
 trouverNord()   
 
}

def trouverNord(){
  var y:Int=getY()
	while(y!=0){
    setDirection(NORD)
    if(estFaceMur()==true){
      while(estFaceMur()==true){
        droite()
      }
      avance()
      setDirection(NORD)
    }else{
      avance()
    }
  }   
  
}

def keepHandOnSideWall(){

  	gauche()
    if(estFaceMur()==true){
      droite()
      if(estFaceMur()==true){
        droite()
      }else{
        avance()
      }

    }else{
      avance()
    }
  
  
}